--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <div class="inner">
 
         <header>
-          <h1>Website</h1>
+          <h1>PVA-Parrot</h1>
           <h2>public website for PVA-Parrot</h2>
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/PVA-Parrot/website/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/PVA-Parrot/website/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/PVA-Parrot/website" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a href="https://github.com/PVA-Parrot/PVA-Parrot/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/PVA-Parrot/https://github.com/PVA-Parrot/PVA-Parrot/zipball/master/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/PVA-Parrot/https://github.com/PVA-Parrot/PVA-Parrot/zipball/master" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
