--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/PVA-Parrot/PVA-Parrot/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/PVA-Parrot/https://github.com/PVA-Parrot/PVA-Parrot/zipball/master/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/PVA-Parrot/https://github.com/PVA-Parrot/PVA-Parrot/zipball/master" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a href="https://github.com/PVA-Parrot/PVA-Parrot/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/PVA-Parrot/PVA-Parrot" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
